--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -1,90 +1,68 @@
-    <!-- Footer Section Begin -->
-    <footer class="footer">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-3 col-md-6 col-sm-6">
-                  <div class="footer__about">
-                      <div class="footer__logo">
-                          <a href="#"><img src="/img/006_006-nike-logos-jordan-white.jpg" alt=""></a>
-                      </div>
-                      <p>The customer is at the heart of our unique business model, which includes design.</p>
-                      <!-- <a href="#"><img src="img/payment.png" alt=""></a> -->
-                      <p>Nike</p>
-                  </div>
-              </div>
-              <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                  <div class="footer__widget">
-                      <h6>Shopping</h6>
-                      <ul>
-                          <li><a href="#">Clothing Store</a></li>
-                          <li><a href="#">Trending Shoes</a></li>
-                          <li><a href="#">Accessories</a></li>
-                          <li><a href="#">Sale</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-2 col-md-3 col-sm-6">
-                  <div class="footer__widget">
-                      <h6>Shopping</h6>
-                      <ul>
-                          <li><a href="#">Contact Us</a></li>
-                          <li><a href="#">Payment Methods</a></li>
-                          <li><a href="#">Delivary</a></li>
-                          <li><a href="#">Return & Exchanges</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
-                  <div class="footer__widget">
-                      <h6>NewLetter</h6>
-                      <div class="footer__newslatter">
-                          <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                          <form action="#">
-                              <input type="text" placeholder="Your email">
-                              <button type="submit"><span class="icon_mail_alt"></span></button>
-                          </form>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-lg-12 text-center">
-                  <div class="footer__copyright__text">
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      <p>Copyright ©
-                          <script>
-                              document.write(new Date().getFullYear());
-                          </script>2020
-                          All rights reserved | This template is made with <i class="fa fa-heart-o"
-                          aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                      </p>
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
-  <!-- Footer Section End -->
-
-  <!-- Search Begin -->
-  <div class="search-model">
-      <div class="h-100 d-flex align-items-center justify-content-center">
-          <div class="search-close-switch">+</div>
-          <form class="search-model-form">
-              <input type="text" id="search-input" placeholder="Search here.....">
-          </form>
-      </div>
-  </div>
-
-
-
-
-<!-- Additinal Links -->
-
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</body>
-</html>
-
-
-
+<!--footer -->
+<footer class="py-lg-5 py-3">
+    <div class="container-fluid px-lg-5 px-3">
+        <div class="row footer-top-w3layouts">
+            <div class="col-lg-3 footer-grid-w3ls">
+                <div class="footer-title">
+                    <h3>About Us</h3>
+                </div>
+                <div class="footer-text">
+                    <p>Welcome to Nike SHOP, Move, Shop, Customise & Celebrate With Us
+                        No matter what you feel like doing today, It’s better as a Member.Join Us</p>
+                    
+                </div>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls">
+                <div class="footer-title">
+                    <h3>Get in touch</h3>
+                </div>
+                <div class="contact-info">
+                    <h4>Location :</h4>
+                    <p>Thrissur, Kerala , India</p>
+                    <div class="phone">
+                        <h4>Contact :</h4>
+                        <p>Phone : +91 99999100001</p>
+                        <p>Email :
+                            <a href="">nikeclone2024@gmail.com</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls">
+                <div class="footer-title">
+                    <h3>Quick Links</h3>
+                </div>
+                <ul class="links">
+                    <li>
+                        <a href="/home">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+        
+                    <li>
+                        <a href="/shop">Shop</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 footer-grid-w3ls">
+                <div class="footer-title">
+                    <h3>Sign up for your offers</h3>
+                </div>
+                <div class="footer-text">
+                    <p>By signing up to our site  you will always get latest offers and updates from us.</p>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-w3layouts mt-4">
+            <p class="copy-right text-center ">&copy; 2024 Nike. All Rights Reserved | Clone website Designed for learning purpose only.
+            
+            </p>
+        </div>
+    </div>
+</footer>
+<!-- //footer -->
+ 
