--- a/public/css/admin/bootstrap.css
+++ b/public/css/admin/bootstrap.css
@@ -1,3 +1,4 @@
+/* New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give you first-letters navigation */
 /* ========================
 Bootstrap with custom variables
 =================== */
@@ -4652,7 +4653,14 @@ fieldset:disabled .btn {
           justify-content: space-between;
 }
 
-
+.navbar-brand {
+  padding-top: 0.3625rem;
+  padding-bottom: 0.3625rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  text-decoration: none;
+  white-space: nowrap;
+}
 
 .navbar-nav {
   display: -webkit-box;
@@ -4918,9 +4926,13 @@ fieldset:disabled .btn {
   display: none;
 }
 
+.navbar-light .navbar-brand {
+  color: rgba(0, 0, 0, 0.9);
+}
 
-
-
+.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+  color: rgba(0, 0, 0, 0.9);
+}
 
 .navbar-light .navbar-nav .nav-link {
   color: rgba(0, 0, 0, 0.55);
@@ -4958,7 +4970,13 @@ fieldset:disabled .btn {
   color: rgba(0, 0, 0, 0.9);
 }
 
+.navbar-dark .navbar-brand {
+  color: #fff;
+}
 
+.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
+  color: #fff;
+}
 
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.55);
